# steer_drive_ros

./: .gitignore  .travis.yml  LICENSE  README.md
.documents/: AboutUdev.md
.documents/udev/: 91-third-robot.rules  AboutUdev.md
steer_bot_hardware_gazebo/: CMakeLists.txt  README.md  package.xml
steer_bot_hardware_gazebo/config/: joints.yaml  joints.yaml~
steer_bot_hardware_gazebo/include/steer_bot_hardware_gazebo/: steer_bot_hardware_gazebo.h
steer_bot_hardware_gazebo/src/: steer_bot_hardware_gazebo.cpp
steer_drive_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml
steer_drive_controller/config/: steer_drive_controller_sample_minimum.yaml
steer_drive_controller/include/steer_drive_controller/: multi_interface_controller.h  odometry.h  steer_drive_controller.h
steer_drive_controller/launch/: steer_drive_test_setting.launch
steer_drive_controller/src/: odometry.cpp  steer_drive_controller.cpp
steer_drive_controller/test/: steer_drive_controller.test  steer_drive_controller_nan.test  steer_drive_nan_test.cpp  steer_drive_test.cpp
steer_drive_controller/test/common/config/: steerbot_controllers.yaml  steerbot_hw_sim.yaml
steer_drive_controller/test/common/include/: steerbot.h  test_common.h
steer_drive_controller/test/common/launch/: steer_drive_common.launch  view_steerbot.launch
steer_drive_controller/test/common/urdf/: steerbot.xacro  wheel.xacro  wheel_sphere.xacro
steer_drive_controller/test/steer_drive_controller_limits_test/: steer_drive_limits_test.cpp  steerbot_limits.yaml
steer_drive_controller/test/steer_drive_controller_nan_test/: steer_drive_nan_test.cpp
steer_drive_controller/test/steer_drive_controller_odom_frame_test/: steer_drive_controller_odom_frame_test.cpp
steer_drive_controller/test/steer_drive_controller_radius_param_fail_test/: steer_drive_controller_radius_param_fail.test
steer_drive_controller/test/steer_drive_controller_radius_param_test/: steer_drive_controller_radius_param.test
steer_drive_controller/test/steer_drive_controller_separation_param_test/: steer_drive_controller_separation_param.test
steer_drive_controller/test/steer_drive_controller_test/: steer_drive_test.cpp
steer_drive_controller/test/steer_drive_controller_timeout_test/: steer_drive_controller_timeout_test.cpp
steer_drive_ros/: CMakeLists.txt  package.xml
step_back_and_max_steer_recovery/: README.md  package.xml
step_back_and_max_steer_recovery/config/: planner_sample.yaml
step_back_and_max_steer_recovery/include/step_back_and_max_steer_recovery/: step_back_and_max_steer_recovery.h
step_back_and_max_steer_recovery/src/: step_back_and_max_steer_recovery.cpp
stepback_and_steerturn_recovery/: CMakeLists.txt  package.xml  step_back_and_max_steer_recovery_plugin.xml  stepback_and_steerturn_recovery_plugin.xml
stepback_and_steerturn_recovery/include/stepback_and_steerturn_recovery/: stepback_and_steerturn_recovery.h
stepback_and_steerturn_recovery/src/: stepback_and_steerturn_recovery.cpp
third_robot_control/steer_bot_hardware_gazebo/: README.md  package.xml  steer_bot_hardware_gazebo_plugins.xml
third_robot_control/steer_bot_hardware_gazebo/include/steer_bot_hardware_gazebo/: steer_bot_hardware_gazebo.h
third_robot_control/steer_bot_hardware_gazebo/src/: steer_bot_hardware_gazebo.cpp
third_robot_control/steer_drive_controller/: CMakeLists.txt  README.md  package.xml  path.bash  steer_drive_controller_plugins.xml
third_robot_control/steer_drive_controller/include/steer_drive_controller/: multi_interface_controller.h  odometry.h  steer_drive_controller.h
third_robot_control/steer_drive_controller/launch/: steer_drive_test_setting.launch
third_robot_control/steer_drive_controller/src/: odometry.cpp  steer_drive_controller.cpp
third_robot_control/steer_drive_controller/test/: .steer_drive_test.cpp.swp  steer_drive_test.cpp  steer_drive_test_setting.launch
