<package>
  <name>steer_drive_controller</name>
  <version>0.1.0</version>
  <description>Controller for a steer drive mobile base.</description>
  <maintainer email="p595201m@mail.kyutech.jp">Masaru Morita</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/MoriKen254/ros_controllers/wiki</url>
  <url type="bugtracker">https://github.com//MoriKen254/ros_controllers/issues</url>
  <url type="repository">https://github.com/MoriKen254/ros_controllers</url>

  <author email="p595201m@mail.kyutech.jp">Masaru Morita</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>controller_interface</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>urdf</build_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>joint_limits_interface</build_depend>

  <build_depend>gazebo</build_depend>

  <run_depend>controller_interface</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>urdf</run_depend>

  <run_depend>angles</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>roscpp</run_depend>

  <!--Tests-->
  <build_depend>rostest</build_depend>

  <test_depend>std_srvs</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>xacro</test_depend>

  <export>
    <controller_interface plugin="${prefix}/steer_drive_controller_plugins.xml"/>
  </export>
</package>
