<package>
    <name>step_back_and_max_steer_recovery</name>
    <version>1.00.00</version>
    <description>

        This package provides a recovery behavior for the navigation stack which steps back and
        proceed with max steer angle

    </description>
    <author>Masaru Morita</author>
    <author>p595201m@mail.kyutech.jp</author>
    <maintainer email="p595201m@mail.kyutech.jp">Masaru Morita</maintainer>

    <license>BSD</license>
    <url>http://wiki.ros.org/TODO</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>nav_core</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>eigen</build_depend>
    <build_depend>base_local_planner</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>costmap_2d</run_depend>
    <run_depend>nav_core</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>eigen</run_depend>


    <export>
        <nav_core plugin="${prefix}/step_back_and_max_steer_recovery_plugin.xml" />
    </export>

</package>
