<package format="2">
    <name>step_back_and_max_steer_recovery</name>
    <version>1.0.0</version>
    <description>

        This package provides a recovery behavior for the navigation stack which steps back and
        proceed with max steer angle

    </description>
    <maintainer email="p595201m@mail.kyutech.jp">Masaru Morita</maintainer>
    <author email="p595201m@mail.kyutech.jp">Masaru Morita</author>

    <license>BSD</license>
    <url>https://github.com/CIR-KIT/third_robot_pkg</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <depend>roscpp</depend>
    <depend>tf</depend>
    <depend>costmap_2d</depend>
    <depend>nav_core</depend>
    <depend>pluginlib</depend>
    <depend>eigen</depend>
    <build_depend>base_local_planner</build_depend>

    <export>
        <nav_core plugin="${prefix}/step_back_and_max_steer_recovery_plugin.xml" />
    </export>

</package>
